--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Laboratorio/Downloads/jar_files/exp4j-0.4.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
